Simplified loadShaderFromFile